@@ -5,12 +5,15 @@ import com.aesp_backend.aesp_backend.common.api.CommonResult;
 import com.aesp_backend.aesp_backend.common.api.MapperUtil;
 import com.aesp_backend.aesp_backend.jpa.entity.OmsCourse;
 import com.aesp_backend.aesp_backend.jpa.entity.UmsMember;
+import com.aesp_backend.aesp_backend.mentor.dto.CourseResponseDTO;
 import com.aesp_backend.aesp_backend.mentor.dto.OmsCourseDto;
 import com.aesp_backend.aesp_backend.mentor.dto.OmsLeasonDto;
 import com.aesp_backend.aesp_backend.mentor.dto.OmsVocabularyDto;
 import com.aesp_backend.aesp_backend.security.JwtTokenUtil;
 import com.aesp_backend.aesp_backend.user.dto.UmsUserRegisterParam;
 import com.aesp_backend.aesp_backend.user.service.UmsUserService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -21,6 +24,7 @@ import org.springframework.web.bind.annotation.*;
 import java.awt.print.Pageable;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/user")
@@ -30,6 +34,8 @@ public class UmsUserController {
     private UmsUserService umsUserService;
     @Autowired
     private JwtTokenUtil jwtTokenUtil;
+
+    private Logger logger = LoggerFactory.getLogger(UmsUserController.class);
 
     @PostMapping("/register")
     public CommonResult register(@RequestBody UmsUserRegisterParam userRegisterParam) {
@@ -54,59 +60,19 @@ public class UmsUserController {
     }
 
     @GetMapping("/list-courses")
-    public CommonResult<List<OmsCourseDto>> listCourses(@RequestParam int page, @RequestParam int size) {
+    public CommonResult<List<CourseResponseDTO>> listCourses(@RequestParam int page, @RequestParam int size) {
         Page<OmsCourse> courses = umsUserService.getCourses(page, size); // hoặc service trả về List<OmsCourse>
 
-        List<OmsCourseDto> courseDtos = courses.stream().map(course -> {
-            OmsCourseDto courseDto = new OmsCourseDto();
-            BeanUtils.copyProperties(course, courseDto);
 
-            // map lessons
-            if (course.getOmsLeasons() != null) {
-                List<OmsLeasonDto> lessonsDto = course.getOmsLeasons().stream().map(lesson -> {
-                    OmsLeasonDto lessonDto = new OmsLeasonDto();
-                    BeanUtils.copyProperties(lesson, lessonDto);
-
-                    // map vocabularies
-                    if (lesson.getOmsVocabulary() != null && !lesson.getOmsVocabulary().isEmpty()) {
-                        List<OmsVocabularyDto> vocabsDto = lesson.getOmsVocabulary().stream().map(vocab -> {
-                            OmsVocabularyDto vocabDto = new OmsVocabularyDto();
-                            BeanUtils.copyProperties(vocab, vocabDto);
-
-                            if (vocab.getAudio() != null) {
-                                vocabDto.setAudio(vocab.getAudio());
-                            }
-
-                            return vocabDto;
-                        }).toList();
-                        lessonDto.setVocabularies(vocabsDto);
-                    }
-
-                    if (lesson.getPdf() != null) {
-                        lessonDto.setPdf(lesson.getPdf());
-                    }
-
-                    return lessonDto;
-                }).toList();
-                courseDto.setLeasons(lessonsDto);
-            }
-
-            if (course.getThumb() != null) {
-                courseDto.setThumb(course.getThumb());
-            }
-
-            return courseDto;
-        }).toList();
-
-        return CommonResult.success(courseDtos);
+        return CommonResult.success(courses.stream().map(CourseResponseDTO::new).collect(Collectors.toList()));
     }
 
     @GetMapping("/my-course")
-    public CommonResult<List<OmsCourseDto>> mycourse(@RequestParam int id, @RequestParam int page, @RequestParam int size) {
+    public CommonResult<List<CourseResponseDTO>> mycourse(@RequestParam int page, @RequestParam int size) {
         Page<OmsCourse> pages = umsUserService.myCourse(page, size);
         List<OmsLeasonDto> omsLeasonDtos = new ArrayList<>();
         if (pages != null) {
-            return CommonResult.success(MapperUtil.toCourseDtoList(pages.getContent()));
+            return CommonResult.success(pages.stream().map(CourseResponseDTO::new).collect(Collectors.toList()));
         }
         return CommonResult.failed(null);
     }
@@ -114,9 +80,12 @@ public class UmsUserController {
     @GetMapping("/see-course")
 
     public CommonResult<OmsCourseDto> see_course(@RequestParam int id) {
+        logger.debug("dang lay thong tin cho khoa hoc co id:" + id);
+
         OmsCourse omsCourse = umsUserService.getCourse(id);
 
         if (omsCourse != null) {
+            logger.debug("lay duoc thong tin khoa hoc");
             return CommonResult.success(MapperUtil.toCourseDto(omsCourse));
         }
         return CommonResult.failed(null);
